--- a/lib/libc/sys/getrlimit.2
+++ b/lib/libc/sys/getrlimit.2
@@ -28,7 +28,7 @@
 .\"     @(#)getrlimit.2	8.1 (Berkeley) 6/4/93
 .\" $FreeBSD: src/lib/libc/sys/getrlimit.2,v 1.10.2.5 2001/12/14 18:34:00 ru Exp $
 .\"
-.Dd July 6, 2009
+.Dd March 1, 2019
 .Dt GETRLIMIT 2
 .Os
 .Sh NAME
@@ -146,8 +146,8 @@ is thus a built-in command to
 .Xr csh 1 .
 .Pp
 The system refuses to extend the data or stack space when the limits
-would be exceeded in the normal way: a
-.Xr brk 2
+would be exceeded in the normal way: an
+.Xr sbrk 2
 call fails if the data space limit is reached.
 When the stack limit is reached, the process receives
 a segmentation fault
