--- a/lib/libc/net/gethostbyname.3
+++ b/lib/libc/net/gethostbyname.3
@@ -302,7 +302,7 @@ for example, a mail-forwarder may be registered for this domain.
 .Xr hosts 5 ,
 .Xr hostname 7 ,
 .Xr named 8
-.Sh CAVEAT
+.Sh CAVEATS
 The
 .Fn gethostent
 function
