--- a/lib/libsdp/sdp.3
+++ b/lib/libsdp/sdp.3
@@ -345,7 +345,7 @@ The
 and
 .Fa datalen
 parameters specify data and size of the data for the service.
-.Sh CAVEAT
+.Sh CAVEATS
 When registering services with the local SDP server the application must
 keep the SDP session open.
 If SDP session is closed then the local SDP server will remove all services
