--- a/lib/libc/gen/dlopen.3
+++ b/lib/libc/gen/dlopen.3
@@ -174,12 +174,12 @@ The
 function can be used by the code that needs to perform
 additional checks on the loaded objects, to prevent races with
 symlinking or renames.
-.Sh RETURN VALUE
+.Sh RETURN VALUES
 The functions return a null pointer in the event of an error.
 Whenever an error has been detected, a message detailing it can be
 retrieved via a call to
 .Fn dlerror .
-.Sh EXAMPLE
+.Sh EXAMPLES
 The following program will open any shared gcc library found
 and display the directory in which it was found using the
 dfinfo function.
