--- a/share/man/man4/virtio_balloon.4
+++ b/share/man/man4/virtio_balloon.4
@@ -51,7 +51,7 @@ The memory balloon allows the guest to, at the request of the
 hypervisor, return memory allocated to the hypervisor so it can
 be made available to other guests.
 The hypervisor can later signal the balloon to return the memory.
-.Sh EXAMPLE:
+.Sh EXAMPLES
 .Bd -literal
 (vmguest) # kldload virtio_balloon
 (vmguest) # sysctl dev.vtballoon.desired
