--- a/lib/libc/stdtime/timespec_get.3
+++ b/lib/libc/stdtime/timespec_get.3
@@ -36,7 +36,7 @@
 .Os
 .Sh NAME
 .Nm timespec_get
-.Nd Set specified timespec structure to a current time.
+.Nd Set specified timespec structure to a current time
 .Sh LIBRARY
 .Lb libc
 .Sh SYNOPSIS
