--- a/lib/libusb/libusb20.3
+++ b/lib/libusb/libusb20.3
@@ -314,14 +314,16 @@ This function returns NULL in case of failure.
 .
 .Fn libusb20_tr_get_time_complete
 will return the completion time of an USB transfer in
-millisecond units. This function is most useful for isochronous USB
+millisecond units.
+This function is most useful for isochronous USB
 transfers when doing echo cancelling.
 .
 .Pp
 .
 .Fn libusb20_tr_get_actual_frames
 will return the actual number of USB frames after an USB
-transfer completed. A value of zero means that no data was transferred.
+transfer completed.
+A value of zero means that no data was transferred.
 .
 .Pp
 .
@@ -683,7 +685,8 @@ Before this call will succeed the USB device must be opened.
 .Fa setup
 is a pointer to a decoded and host endian SETUP packet.
 .Fa data
-is a pointer to a data transfer buffer associated with the control transaction. This argument can be NULL.
+is a pointer to a data transfer buffer associated with the control transaction.
+This argument can be NULL.
 .Fa pactlen
 is a pointer to a variable that will hold the actual transfer length after the control transaction is complete.
 .Fa timeout
@@ -785,9 +788,11 @@ The USB device need not be opened when calling this function.
 .
 .Fn libusb20_dev_alloc_config
 will read out and decode the USB config descriptor for
-the given USB device and config index. This function returns a pointer
+the given USB device and config index.
+This function returns a pointer
 to the decoded configuration which must eventually be passed to
-free(). NULL is returned in case of failure.
+.Fn free .
+NULL is returned in case of failure.
 .
 .Pp
 .
@@ -959,8 +964,8 @@ returned.
 .Fn libusb20_be_alloc_freebsd
 .Fn libusb20_be_alloc_linux
 These functions are used to allocate a specific USB backend or the
-operating system default USB backend. Allocating a backend is a way to
-scan for currently present USB devices.
+operating system default USB backend.
+Allocating a backend is a way to scan for currently present USB devices.
 .
 .Pp
 .
