Fix some self references in our manual pages.

--- a/lib/libc/sys/mount.2
+++ b/lib/libc/sys/mount.2
@@ -287,7 +287,7 @@ function may fail with one of the following errors:
 .Bl -tag -width Er
 .It Bq Er EPERM
 The caller is neither the super-user nor the user who issued the corresponding
-.Xr mount 2
+.Fn mount
 call.
 .It Bq Er ENOTDIR
 A component of the path is not a directory.
