--- a/lib/libkvm/kvm.3
+++ b/lib/libkvm/kvm.3
@@ -42,7 +42,7 @@
 .Lb libkvm
 .Sh DESCRIPTION
 The
-.Xr kvm 3
+.Nm kvm
 library provides a uniform interface for accessing kernel virtual memory
 images, including live systems and crash dumps.
 Access to live systems is via
