virtio.4: Add missing newline.

--- a/share/man/man4/virtio.4
+++ b/share/man/man4/virtio.4
@@ -106,5 +106,6 @@ Support for VirtIO first appeared in
 support for VirtIO was first added by
 .An Bryan Venteicher Aq Mt bryanv@FreeBSD.org .
 .Pp
-.Dx support for Virtio Memory Balloon adapted by
+.Dx
+support for Virtio Memory Balloon adapted by
 .An Diederik de Groot Aq Mt info@talon.nl .
