--- a/share/man/man9/idr.9
+++ b/share/man/man9/idr.9
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd March 21, 2018
+.Dd March 16, 2019
 .Dt IDR 9
 .Os
 .Sh NAME
@@ -56,7 +56,7 @@
 .Fn idr_init "struct idr *idp"
 .Ft int
 .Fn idr_pre_get "struct idr *idp" "unsigned gfp_mask"
-.Ft void
+.Ft void *
 .Fn idr_remove "struct idr *idp" "int id"
 .Ft void
 .Fn idr_remove_all "struct idr *idp"
