Fix some typos in manpages/messages.

--- a/share/man/man7/tuning.7
+++ b/share/man/man7/tuning.7
@@ -518,7 +518,7 @@ accesses and dirty data.
 .Pp
 The kernel reserves (128KB * nbuf) bytes of KVM.  The actual physical
 memory use depends on the filesystem buffer size.
-It is generally more flexible to manage the filesytem cache via
+It is generally more flexible to manage the filesystem cache via
 .Va kern.maxfiles
 than via
 .Va kern.nbuf ,
