--- a/lib/libkvm/kvm.3
+++ b/lib/libkvm/kvm.3
@@ -57,10 +57,15 @@ be gathered.
 .Fn kvm_open
 is first called to obtain a descriptor for all subsequent calls.
 .Sh COMPATIBILITY
-The kvm interface was first introduced in SunOS.  A considerable
+The
+.Nm
+interface was first introduced in SunOS.
+A considerable
 number of programs have been developed that use this interface,
 making backward compatibility highly desirable.
-In most respects, the Sun kvm interface is consistent and clean.
+In most respects, the Sun
+.Nm
+interface is consistent and clean.
 Accordingly, the generic portion of the interface (i.e.,
 .Fn kvm_open ,
 .Fn kvm_close ,
@@ -70,15 +75,20 @@ and
 .Fn kvm_nlist )
 has been incorporated into the
 .Bx
-interface.  Indeed, many kvm
+interface.
+Indeed, many
+.Nm
 applications (i.e., debuggers and statistical monitors) use only
 this subset of the interface.
 .Pp
-The process interface was not kept.  This is not a portability
+The process interface was not kept.
+This is not a portability
 issue since any code that manipulates processes is inherently
 machine dependent.
 .Pp
-Finally, the Sun kvm error reporting semantics are poorly defined.
+Finally, the Sun
+.Nm
+error reporting semantics are poorly defined.
 The library can be configured either to print errors to stderr automatically,
 or to print no error messages at all.
 In the latter case, the nature of the error cannot be determined.
