callout.9: Fix callout_terminate() prototype.

--- a/share/man/man9/callout.9
+++ b/share/man/man9/callout.9
@@ -80,7 +80,7 @@ typedef void timeout_t (void *);
 .Fn callout_stop_async "struct callout *c"
 .Ft int
 .Fn callout_cancel "struct callout *c"
-.Ft int
+.Ft void
 .Fn callout_terminate "struct callout *c"
 .Sh DESCRIPTION
 The
